Added login front end

--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -1,5 +1,5 @@
 <a class="item">
-Chatroom
+<%= link_to "Chatroom", root_path, class: "item" %>
 </a>
 <a class="item">
 Messages
@@ -9,7 +9,7 @@ Messages
     Account <i class="dropdown icon"></i>
         <div class="menu">
             <a class="item">Log out</a>
-            <a class="item">Log in</a>
+            <%= link_to "Log in", login_path, class: "item" %>
             <a class="item">Sign up</a>
         </div>
     </div>
