--- a/app/views/chatroom/index.html.erb
+++ b/app/views/chatroom/index.html.erb
@@ -8,34 +8,15 @@
         <div class="ui fluid raised card chatbox">
             <div class="content">
                 <div class="ui feed">
-                <div class="event">
-                    <div class="content">
-                    <div class="summary">
-                        <em>Christian Rocha</em>: Test message
-                    </div>
-                    </div>
-                </div>
-                <div class="event">
-                    <div class="content">
-                    <div class="summary">
-                        <em>Christian Rocha</em>: Test message
-                    </div>
-                    </div>
-                </div>
-                <div class="event">
-                    <div class="content">
-                    <div class="summary">
-                        <em>Christian Rocha</em>: Test message
-                    </div>
-                    </div>
-                </div>
-                <div class="event">
-                    <div class="content">
-                    <div class="summary">
-                        <em>Christian Rocha</em>: Test message
-                    </div>
-                    </div>
-                </div>
+                    <% @messages.each do |message| %>
+                        <div class="event">
+                            <div class="content">
+                                <div class="summary">
+                                    <em><%= message.user.username %></em>: <%= message.body %>
+                                </div>
+                            </div>
+                        </div>            
+                    <% end %>
                 </div>
             </div>
             <div class="extra content">
